tests/ui/consts/issue-104609.stderr
error[E0425]: cannot find value `oops` in this scope
  --> $DIR/issue-104609.rs:2:5
   |
LL |     oops;
   |     ^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
